--- a/дипка/GYM/GYM.csproj
+++ b/дипка/GYM/GYM.csproj
@@ -32,6 +32,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MetroFramework, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
+      <HintPath>..\packages\MetroModernUI.1.4.0.0\lib\net\MetroFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MetroFramework.Design, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
+      <HintPath>..\packages\MetroModernUI.1.4.0.0\lib\net\MetroFramework.Design.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MetroFramework.Fonts, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
+      <HintPath>..\packages\MetroModernUI.1.4.0.0\lib\net\MetroFramework.Fonts.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <EmbedInteropTypes>True</EmbedInteropTypes>
@@ -54,13 +66,6 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Services" />
-    <Reference Include="System.Windows.Controls.Ribbon">
-      <EmbedInteropTypes>False</EmbedInteropTypes>
-    </Reference>
-    <Reference Include="System.Windows.Forms.Ribbon, Version=2.0.0.0, Culture=neutral, PublicKeyToken=928736e248aa81f9, processorArchitecture=MSIL">
-      <HintPath>..\packages\RibbonWinForms.5.0.1.1\lib\net45\System.Windows.Forms.Ribbon.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -79,12 +84,6 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddEmployee.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AddEmployee.Designer.cs">
-      <DependentUpon>AddEmployee.cs</DependentUpon>
-    </Compile>
     <Compile Include="AddMoney.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -118,6 +117,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ISgymDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="MOD_Employee.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MOD_Employee.Designer.cs">
+      <DependentUpon>MOD_Employee.cs</DependentUpon>
+    </Compile>
     <Compile Include="Money.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -138,9 +143,6 @@
       <DependentUpon>ReportEmployee.xsd</DependentUpon>
     </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
-    <EmbeddedResource Include="AddEmployee.resx">
-      <DependentUpon>AddEmployee.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="AddMoney.resx">
       <DependentUpon>AddMoney.cs</DependentUpon>
     </EmbeddedResource>
@@ -149,6 +151,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="HeadForm.resx">
       <DependentUpon>HeadForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MOD_Employee.resx">
+      <DependentUpon>MOD_Employee.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Money.resx">
       <DependentUpon>Money.cs</DependentUpon>
@@ -244,6 +249,7 @@
     <Content Include="SqlServerTypes\x86\SqlServerSpatial140.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Updates.txt" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DataSource\" />
