--- a/дипка/GYM/packages.config
+++ b/дипка/GYM/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MetroModernUI" version="1.4.0.0" targetFramework="net45" />
   <package id="Microsoft.Report.Viewer" version="11.0.0.0" targetFramework="net45" />
   <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1400.0" targetFramework="net45" />
   <package id="Microsoft.ReportViewer.Common" version="10.0.40219.1" targetFramework="net45" />
@@ -8,4 +9,5 @@
   <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net45" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.3" targetFramework="net45" />
   <package id="RibbonWinForms" version="5.0.1.1" targetFramework="net45" />
+  <package id="System.Windows.Forms.Ribbon35" version="3.5.8.0" targetFramework="net45" />
 </packages>
