--- a/дипка/GYM/GYM.csproj
+++ b/дипка/GYM/GYM.csproj
@@ -84,11 +84,11 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddMoney.cs">
+    <Compile Include="MOD_Money.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddMoney.Designer.cs">
-      <DependentUpon>AddMoney.cs</DependentUpon>
+    <Compile Include="MOD_Money.Designer.cs">
+      <DependentUpon>MOD_Money.cs</DependentUpon>
     </Compile>
     <Compile Include="DSEmployee.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -131,20 +131,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Report.cs">
+    <Compile Include="Send_Mail.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Report.Designer.cs">
-      <DependentUpon>Report.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ReportEmployee.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ReportEmployee.xsd</DependentUpon>
+    <Compile Include="Send_Mail.Designer.cs">
+      <DependentUpon>Send_Mail.cs</DependentUpon>
     </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
-    <EmbeddedResource Include="AddMoney.resx">
-      <DependentUpon>AddMoney.cs</DependentUpon>
+    <EmbeddedResource Include="MOD_Money.resx">
+      <DependentUpon>MOD_Money.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Authorization.resx">
       <DependentUpon>Authorization.cs</DependentUpon>
@@ -167,8 +162,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Report.resx">
-      <DependentUpon>Report.cs</DependentUpon>
+    <EmbeddedResource Include="Send_Mail.resx">
+      <DependentUpon>Send_Mail.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="DSEmployee.xsc">
       <DependentUpon>DSEmployee.xsd</DependentUpon>
@@ -217,17 +212,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="ReportEmployee.xsc">
-      <DependentUpon>ReportEmployee.xsd</DependentUpon>
-    </None>
-    <None Include="ReportEmployee.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>ReportEmployee.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="ReportEmployee.xss">
-      <DependentUpon>ReportEmployee.xsd</DependentUpon>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
