--- a/дипка/GYM/GYM.csproj
+++ b/дипка/GYM/GYM.csproj
@@ -108,6 +108,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DSRepVIE3.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Exit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Exit.Designer.cs">
+      <DependentUpon>Exit.cs</DependentUpon>
+    </Compile>
     <Compile Include="ISgymDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -211,6 +217,9 @@
     <Compile Include="View_trenerovki.Designer.cs">
       <DependentUpon>View_trenerovki.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Exit.resx">
+      <DependentUpon>Exit.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MOD_Money.resx">
       <DependentUpon>MOD_Money.cs</DependentUpon>
     </EmbeddedResource>
