--- a/дипка/GYM/GYM.csproj
+++ b/дипка/GYM/GYM.csproj
@@ -119,6 +119,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ISgymDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="MOD_Abonement.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MOD_Abonement.Designer.cs">
+      <DependentUpon>MOD_Abonement.cs</DependentUpon>
+    </Compile>
     <Compile Include="MOD_Money.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -175,6 +181,17 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepAbonement.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RepAbonement.Designer.cs">
+      <DependentUpon>RepAbonement.cs</DependentUpon>
+    </Compile>
+    <Compile Include="REPAbonement1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>REPAbonement.xsd</DependentUpon>
+    </Compile>
     <Compile Include="ReportTrenerovka.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -220,6 +237,9 @@
     <EmbeddedResource Include="Exit.resx">
       <DependentUpon>Exit.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MOD_Abonement.resx">
+      <DependentUpon>MOD_Abonement.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MOD_Money.resx">
       <DependentUpon>MOD_Money.cs</DependentUpon>
     </EmbeddedResource>
@@ -258,6 +278,10 @@
     </Compile>
     <EmbeddedResource Include="Diagramm_Money_Employ.rdlc" />
     <EmbeddedResource Include="DiagrammMoneyTrener.rdlc" />
+    <EmbeddedResource Include="RepAbonement.resx">
+      <DependentUpon>RepAbonement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="REPAbonement.rdlc" />
     <EmbeddedResource Include="REPORTTrenerovka.rdlc" />
     <EmbeddedResource Include="ReportTrenerovka.resx">
       <DependentUpon>ReportTrenerovka.cs</DependentUpon>
@@ -347,6 +371,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="REPAbonement.xsc">
+      <DependentUpon>REPAbonement.xsd</DependentUpon>
+    </None>
+    <None Include="REPAbonement.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>REPAbonement1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="REPAbonement.xss">
+      <DependentUpon>REPAbonement.xsd</DependentUpon>
+    </None>
     <None Include="RepTrener.xsc">
       <DependentUpon>RepTrener.xsd</DependentUpon>
     </None>
