--- a/дипка/GYM/GYM.csproj
+++ b/дипка/GYM/GYM.csproj
@@ -120,6 +120,8 @@
     <Compile Include="Exit.Designer.cs">
       <DependentUpon>Exit.cs</DependentUpon>
     </Compile>
+    <Compile Include="HelperLog.cs" />
+    <Compile Include="Inputaccuracy.cs" />
     <Compile Include="ISgymDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -192,6 +194,12 @@
       <DependentUpon>Money.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="AboutTheProgramm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AboutTheProgramm.Designer.cs">
+      <DependentUpon>AboutTheProgramm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReportAbonement.cs">
       <SubType>Form</SubType>
@@ -296,6 +304,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Money.resx">
       <DependentUpon>Money.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AboutTheProgramm.resx">
+      <DependentUpon>AboutTheProgramm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
